--- a/index.html
+++ b/index.html
@@ -1,28 +1,71 @@
-<!DOCTYPE html>
-<html lang="en-US" class="tape-clean tape-pink">
-<meta charset="utf-8">
-<title>tlfr mural</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="color-scheme" content="light">
-<meta name="theme-color" content="indigo">
-<meta name="description" content="too low front row moshing fx">
-<meta name="creator" content="*">
+  <!DOCTYPE html>
+  <html lang="en-US" class="tape-flow tape-pink">
+  <meta charset="utf-8">
+  <title>contrast ratio and juliet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="hotpink">
+  <meta name="description" content="a11y hue saturate webs">
+  <meta name="creator" content="💔">
 
-<style media=(color) data-via="https://github.com/s9a/tape/releases/v0.4.0">
-:root{--tape-white:#e9e9e9;--tape-black:#090909;--tape-pink:#fbbfff;--tape-yellow:#eee833;--tape-blue:#11dff1;--tape-green:#44f477;--tape-filter:none}@media (prefers-contrast:less){:root{--tape-white:#dcdcdc;--tape-black:#272727}}.tape-white{--tape-hex:var(--tape-white)}.tape-blue{--tape-hex:var(--tape-blue)}.tape-pink{--tape-hex:var(--tape-pink)}.tape-green{--tape-hex:var(--tape-green)}.tape-yellow{--tape-hex:var(--tape-yellow)}.tape-clean:not(.tape-clash),.tape-clean :not(.tape-clash){background:transparent;color:inherit}.tape-flat{border-color:transparent}.tape-flap{border-color:currentColor}.tape-blue,.tape-pink,.tape-green,.tape-yellow,.tape-white{filter:var(--tape-filter);background:var(--tape-hex)!important;color:var(--tape-black)!important}.tape-black{background:var(--tape-black)!important;color:var(--tape-hex,var(--tape-white))!important}.tape-erase,.tape-erase *{color:transparent!important}
-</style>
+  <style media=(color) data-imagine=https://s9a.org/tape/releases/tag/v0.5.0>
+  :root{--tape-black:#090909;--tape-white:#e9e9e9;--tape-pink:#fbbfff;--tape-yellow:#eee833;--tape-blue:#11dff1;--tape-green:#44f477;--tape-filter:none;--tape-mix:transparent}@media (prefers-contrast:less){:root{--tape-white:#dcdcdc;--tape-black:#181818}}.tape-black,.tape-white{--tape-hex:var(--tape-white)}.tape-blue{--tape-hex:var(--tape-blue)}.tape-pink{--tape-hex:var(--tape-pink)}.tape-green{--tape-hex:var(--tape-green)}.tape-yellow{--tape-hex:var(--tape-yellow)}.tape-flat{border-color:transparent}.tape-flap{border-color:currentColor}.tape-flow{--tape-remix:none}.tape-flow :not(.tape-skip){background-color:transparent;color:inherit}.tape-black,.tape-blue,.tape-pink,.tape-green,.tape-yellow,.tape-white{--tape-mix:var(--tape-hex);--tape-remix:none;color:var(--tape-black)!important;background-color:var(--tape-mix)!important;background-image:var(--tape-remix);filter:var(--tape-filter)}.tape-black{--tape-mix:var(--tape-black);color:var(--tape-hex)!important}.tape-erase,.tape-erase *{color:transparent!important}
+  </style>
 
-<link rel="stylesheet" href="stage.css">
-<link rel="icon" href="icon.svg">
-<link rel="help" href="https://s9a.page/tape">
+  <style media=(color)> 
+    ::selection { 
+      color: indigo;
+      background: salmon;
+    }
 
-<h1 class="voz">
-  <abbr title="too low front row">tlfr</abbr>
-</h1>
+    :root { 
+      --tape-black: #315;
+      --tape-pink: #a5e;
+      --tape-yellow: #ea5;
+      --tape-blue: #5be;
+      --tape-green: #2c8;
+      --tape-white: #ecd;
+    }
+  </style>
 
-<ul class="unity shadow" aria-label="unity shadow">
-  <li class="unified tape-pink" id="too"><a>too</a>
-  <li class="unified tape-yellow" id="low"><a>low</a>
-  <li class="unified tape-blue" id="front"><a>front</a>
-  <li class="unified tape-green" id="row"><a>row</a>
-</ul>
+  <link rel="stylesheet" href="aerosol.css">
+  <link rel="icon" href="hue.svg">
+  <link rel="home" href="https://s9a.page">
+  <link rel="next" href="https://s9a.page/mochi">
+  <link rel="home" href="https://s9a.page">
+
+  <main class="flowsinyo">
+    <header class="tape-yellow">
+      <h1>
+        <small>contrast</small>
+        <a href="https://s9a.page/mochi"><b>rat</b>io</a>
+        <b>+</b>
+        <a href="https://webmural.com/tlfr">juliet</a>
+      </h1> 
+    </header>
+
+    <h2>
+      re:
+      <a class="tape-green" href="https://s9a.page">sorcery</a>
+    </h2>
+    <p>
+      <a class="tape-white" href="https://s9a.page/mochi">mochi</a>
+      prefers hue >=4.5
+      4ur vision
+      <a class="tape-white" href="https://webmural.com/a11y">a11y</a>
+      and you better play 
+      noise because
+      sox will eat hue
+      or ur fone b/c 
+      7+ is hella 
+      sweet 4ur fone 
+      and 3+ <a class="tape-yellow" href="https://webmural.com/bee">bee</a>
+      basic bggy  
+      just aska
+      <a class="tape-flow tape-pink" href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG/Perceivable/Color_contrast">firefox</a> aura
+      <a class="tape-yellow" href="https://s9a.page/daffo">flow</a> aura
+      <a class="tape-yellow tape-black" href="https://s9a.page/wave">wave</a>))))))
+      ++ifu approach 20 u gonna busta rime
+      so just <a class="tape-blue" href="https://webmural.com/slipup">slipup</a>  
+    </p>
+  </main>
